kubernetes/_apps/external-secrets/external-secrets/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: bitwarden-secretsmanager
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: bitwarden-sdk-server
    egress:
      - toFQDNs:
          - matchName: "api.bitwarden.eu"
          - matchName: "identity.bitwarden.eu"
        toPorts:
          - ports:
              - port: "443"
